<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_courses"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_suggestion"
            android:icon="@drawable/ic_chat"
            android:title="@string/suggestions" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/profileSettingsFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

    </group>
</menu>