<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.dashboard.ui.profile.OtherUserProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="17dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:backgroundTint="@color/dark_white"
                android:elevation="5dp"
                app:cardCornerRadius="5dp"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_img"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_person_black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/profile_img"
                        app:layout_constraintStart_toEndOf="@+id/profile_img"
                        app:layout_constraintTop_toTopOf="@+id/profile_img">

                        <TextView
                            android:id="@+id/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/black"
                            android:textSize="19sp" />

                        <TextView
                            android:id="@+id/email_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_address"
                            android:textSize="15sp"
                            android:textStyle="italic" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/profile_img"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/firstname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/firstname"
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/lastname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lastname"
                                android:textColor="@color/black"
                                android:textSize="19sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/face_book" />

                                <TextView
                                    android:layout_gravity="center_vertical"
                                    android:id="@+id/facebook_icon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:text="@string/facebook_username"
                                    android:textColor="@color/black"
                                    android:textSize="19sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:scaleType="centerCrop"
                                    android:backgroundTint="@color/white"
                                    android:src="@drawable/linke_dln" />

                                <TextView
                                    android:layout_gravity="center_vertical"
                                    android:id="@+id/linkedln"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="5dp"
                                    android:text="@string/linkedln_username"
                                    android:textColor="@color/black"
                                    android:textSize="19sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:orientation="horizontal">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/git_logo" />

                                <TextView
                                    android:layout_gravity="center_vertical"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/github"
                                    android:layout_marginStart="5dp"
                                    android:text="@string/github_username"
                                    android:textColor="@color/black"
                                    android:textSize="19sp" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestions"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:textColor="@color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:id="@+id/rv_users_suggestions"
                android:paddingBottom="20dp"/>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>